docs: update docs for setting the QEMU BIOS path
commit ddf2dfa1f79af0405df5ca10583764a497c7a0db
provided a way to determine which bios files to use.
But we need to update related docs.

disccussed at:
http://www.redhat.com/archives/libvir-list/2012-June/msg01286.html

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>
Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -126,9 +126,10 @@
         these. <span class="since">Since 0.0.1</span></dd>
       <dt><code>loader</code></dt>
       <dd>The optional <code>loader</code> tag refers to a firmware blob
-        used to assist the domain creation process. At this time, it is
-        only needed by Xen fully virtualized
-        domains. <span class="since">Since 0.1.0</span></dd>
+        used to assist the domain creation process. It is used by Xen
+        fully virtualized domains as well as setting the QEMU BIOS file
+        path for QEMU/KVM domains. <span class="since">Xen since 0.1.0,
+        QEMU/KVM since 0.9.12</span></dd>
       <dt><code>boot</code></dt>
       <dd>The <code>dev</code> attribute takes one of the values "fd", "hd",
         "cdrom" or "network" and is used to specify the next boot device
