--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2228,11 +2228,15 @@ exit 0
 %doc examples/systemtap
 
 %changelog
+* Sun May  4 2014 Daniel Veillard <veillard@redhat.com> - 1.2.4-1
+- various improvements and bug fixes
+- lot of internal code refactoring
+
 * Tue Apr  1 2014 Daniel Veillard <veillard@redhat.com> - 1.2.3-1
-- add new virDomainCoreDumpWithFormat API (Qiao Nuohan)
-- conf: Introduce virDomainDeviceGetInfo API (Jiri Denemark)
-- more features and fixes on bhyve driver (Roman Bogorodskiy)
-- lot of cleanups and improvement on the Xen driver (Chunyan Liu, Jim Fehlig)
+- add new virDomainCoreDumpWithFormat API
+- conf: Introduce virDomainDeviceGetInfo API
+- more features and fixes on bhyve driver
+- lot of cleanups and improvement on the Xen driver
 - a lot of various improvements and bug fixes
 
 * Sun Mar  2 2014 Daniel Veillard <veillard@redhat.com> - 1.2.2-1
