--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -247,7 +247,7 @@ NETDEV_CONF_SOURCES =						\
 # Domain driver generic impl APIs
 DOMAIN_CONF_SOURCES =						\
 		conf/capabilities.c conf/capabilities.h		\
-		conf/domain_addr.h		\
+		conf/domain_addr.c conf/domain_addr.h		\
 		conf/domain_conf.c conf/domain_conf.h		\
 		conf/domain_audit.c conf/domain_audit.h		\
 		conf/domain_nwfilter.c conf/domain_nwfilter.h	\
