Forgot spec changelog in 1.2.5 commit

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2225,6 +2225,12 @@ exit 0
 %doc examples/systemtap
 
 %changelog
+* Mon Jun  2 2014 Daniel Veillard <veillard@redhat.com> - 1.2.5-1
+- LSN-2014-0003: Don't expand entities when parsing XML (security)
+- Introduce virDomain{Get,Set}Time APIs
+- Introduce virDomainFSFreeze() and virDomainFSThaw() public API
+- various improvements and bug fixes
+
 * Sun May  4 2014 Daniel Veillard <veillard@redhat.com> - 1.2.4-1
 - various improvements and bug fixes
 - lot of internal code refactoring
