tests: Build virstoragetest only when storage driver is compiled too
virstoragetest now requires parts of the storage driver to be built.
Without this change the test can't be compiled on platforms that don't
build the storage driver (mingw).

make[2]: *** No rule to make target `../src/libvirt_driver_storage_impl.la', needed by `virstoragetest.exe'.  Stop.

Broken by commit 713cc3b0a7ff8ad42b4c13429b624d1b2b5a99f2

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -162,7 +162,6 @@ test_programs = virshtest sockettest \
 	virstringtest \
 	virportallocatortest \
 	sysinfotest \
-	virstoragetest \
 	virnetdevbandwidthtest \
 	virkmodtest \
 	vircapstest \
@@ -279,7 +278,8 @@ test_programs += nwfilterxml2firewalltest
 endif WITH_NWFILTER
 
 if WITH_STORAGE
-test_programs += storagevolxml2argvtest
+test_programs += storagevolxml2argvtest \
+	virstoragetest
 endif WITH_STORAGE
 
 if WITH_LINUX
